# AMI-AUTH

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  mypy.toml  package-lock.json  package.json  pyproject.toml  ruff.toml
ami/api/: deps.py  router_dataops.py  schemas.py
ami/core/: app.py  settings.py
ami/crypto/: jwt_manager.py  keys.py  password.py  types.py
ami/db/: base.py  engine.py  models_keys.py  models_oauth.py  models_user.py  repo_keys.py  repo_oauth.py  repo_user.py
ami/db/migrations/: env.py
ami/oidc/: auth_code.py  discovery.py  routes_authorize.py  routes_discovery.py  routes_revoke.py  routes_token.py  routes_userinfo.py  token_service.py  types.py
scripts/ci/: check_dependency_versions.py  check_file_length.py
src/: auth-store.ts  config.ts  dataops-client.ts  env.ts  errors.ts  providers.ts  server.ts  types.ts
tests/: conftest.py
tests/integration/: test_oidc_flow.py
tests/unit/api/: test_router_dataops.py
tests/unit/crypto/: test_jwt_manager.py  test_keys.py  test_password.py
tests/unit/db/: test_repo_keys.py  test_repo_user.py
tests/unit/oidc/: test_auth_code.py  test_auth_code_db.py  test_discovery.py  test_routes_authorize.py  test_routes_discovery.py  test_routes_revoke.py  test_routes_token.py  test_routes_userinfo.py  test_token_service.py  test_token_service_db.py
